--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
   <img src="Insider-Trading.jpg" alt="Logo" width = "200">
   <form method="post" action="">
     <p>Welcome back, please login to your account</p>
-    <p><input type="text" name="login" value="" placeholder="Username"></p>
-    <p><input type="password" name="password" value="" placeholder="Password"></p>
+    <p><input type="username" name="login" value="" placeholder="Username" id = "username" required></p>
+    <p><input type="password" name="password" value="" placeholder="Password" id ="password" required></p>
     <p class="remember_me">
       <label>
         <input type="checkbox" name="remember_me" id="remember_me">
@@ -21,5 +21,5 @@
   <p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
 </div>
 <div class="new-account">
-  <p>Don't have an account? Make one <a href="#">here</a>.</p>
+  <p>Don't have an account? Make one <a href="createUser.html">here</a>.</p>
 </div>
