--- a/webpage/login.html
+++ b/webpage/login.html
@@ -3,7 +3,7 @@
 <div class="login">
   <h1>Insider Trading</h1>
   <img src="Insider-Trading.jpg" alt="Logo" width="200">
-  <form method="post" action="">
+  <form method="post" action="./homepage.html">
     <p>Welcome back, please login to your account</p>
     <p><input type="username" name="login" value="" placeholder="Username" id="username" required></p>
     <p><input type="password" name="password" value="" placeholder="Password" id="password" required></p>
