--- a/group/SpecRunner.html
+++ b/group/SpecRunner.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Jasmine Spec Runner v4.0.1</title>
 
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="lib/jasmine-4.0.1/jasmine_favicon.png"
-    />
-    <link rel="stylesheet" href="lib/jasmine-4.0.1/jasmine.css" />
+<head>
+  <meta charset="utf-8" />
+  <title>Jasmine Spec Runner v4.0.1</title>
 
-    <script src="lib/jasmine-4.0.1/jasmine.js"></script>
-    <script src="lib/jasmine-4.0.1/jasmine-html.js"></script>
-    <script src="lib/jasmine-4.0.1/boot0.js"></script>
-    <!-- optional: include a file here that configures the Jasmine env -->
-    <script src="lib/jasmine-4.0.1/boot1.js"></script>
+  <link rel="shortcut icon" type="image/png" href="lib/jasmine-4.0.1/jasmine_favicon.png" />
+  <link rel="stylesheet" href="lib/jasmine-4.0.1/jasmine.css" />
 
-    <!-- include source files here... -->
-    <script src="src/group.js"></script>
+  <script src="lib/jasmine-4.0.1/jasmine.js"></script>
+  <script src="lib/jasmine-4.0.1/jasmine-html.js"></script>
+  <script src="lib/jasmine-4.0.1/boot0.js"></script>
+  <!-- optional: include a file here that configures the Jasmine env -->
+  <script src="lib/jasmine-4.0.1/boot1.js"></script>
 
-    <!-- include test files here... -->
-    <script src="spec/groupSpec.js"></script>
-  </head>
+  <!-- include source files here... -->
+  <script src="src/group.js"></script>
 
-  <body></body>
+  <!-- include test files here... -->
+  <script src="spec/groupSpec.js"></script>
+</head>
+
+<body></body>
+
 </html>
