--- a/webpage/createUser.html
+++ b/webpage/createUser.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<script src="newUserButtonClick.js"></script>
+<script src="localStorage.js"></script>
 
 <div class="login">
   <h1>Insider Trading</h1>
