--- a/webpage/homepage.html
+++ b/webpage/homepage.html
@@ -5,7 +5,6 @@
 
 
 <style>
-
     .table-content {
         width: 50%;
         margin-left: 20%
@@ -156,7 +155,7 @@
 
     <div class="tab">
         <div class="titleBox">
-            <img src="house.png" style="margin-right: 2vw">
+            <img src="Insider-Trading.jpg" width="150px" style="margin-right: 2vw">
             <h1>Insider Trading</h1>
         </div>
 
@@ -235,8 +234,6 @@
         </div>
         <div class="tabcontentwrapper hiddenContent" id="settings">
             <div class="login">
-                <h1>Insider Trading</h1>
-                <img src="Insider-Trading.jpg" alt="Logo" width="200">
                 <form method="post" action="">
                     <p>Reset your password. </p>
                     <p><input type="email" name="login" value="" placeholder="Username" id="username" required></p>
