--- a/group/src/test.html
+++ b/group/src/test.html
@@ -229,7 +229,7 @@
             <h1>+</h1>
           </div>
         </div>
-        <!-- <div class="tabcontentwrapper hiddenContent" id="logout">
+        <!-- \<div class="tabcontentwrapper hiddenContent" id="logout">
             <h1>Insider Trading</h1>
             <img src="Insider-Trading.jpg" alt="Logo" width="200">
             <form method="post" action="">
