--- a/webpage/homepage.html
+++ b/webpage/homepage.html
@@ -5,6 +5,26 @@
 
 
 <style>
+    .button-format {
+        display: inline-block;
+        padding: 0.3em 1.2em;
+        margin: 0 0.1em 0.1em 0;
+        border: 0.16em solid rgba(255, 255, 255, 0);
+        border-radius: 2em;
+        box-sizing: border-box;
+        text-decoration: none;
+        font-family: 'Roboto', sans-serif;
+        color: black;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        text-align: center;
+        transition: all 0.2s;
+        margin-left: 2%
+    }
+
+    .button-format:hover {
+        border-color: black;
+    }
+
     .table-content {
         width: 50%;
         margin-left: 20%
