--- a/mainCode/webpage/login.html
+++ b/mainCode/webpage/login.html
@@ -1,33 +1,6 @@
-<!-- <!DOCTYPE html>
-
-<div class="login">
-  <h1>Insider Trading</h1>
-  <img src="Insider-Trading.jpg" alt="Logo" width="200">
-  <form method="post" action="./homepage.html">
-    <p>Welcome back, please login to your account</p>
-    <p><input type="username" name="login" value="" placeholder="Username" id="username" required></p>
-    <p><input type="password" name="password" value="" placeholder="Password" id="password" required></p>
-    <p class="remember_me">
-      <label>
-        <input type="checkbox" name="remember_me" id="remember_me">
-        Remember me on this computer
-      </label>
-    </p>
-    <p class="submit"><input type="submit" name="commit" value="Login"></p>
-  </form>
-</div>
-
-<div class="login-help">
-  <p>Forgot your password? <a href="setPassword.html">Click here to reset it</a>.</p>
-</div>
-<div class="new-account">
-  <p>Don't have an account? Make one <a href="createUser.html">here</a>.</p>
-</div> -->
-
-
 <!DOCTYPE html>
 
-<script src="login.js"></script>
+
 <style>
   body {
     color: rgb(38, 50, 56);
@@ -37,6 +10,7 @@
     padding: 0.5vw;
     margin: 0;
   }
+
 
   .username {
     width: 65%;
@@ -67,19 +41,25 @@
     font-size: 13px;
   }
 
+  .login {
+    text-align: center;
+  }
+
   .boxed {
     color: rgb(38, 50, 56);
     background-color: #ADD8E6;
-    border: 1px solid black;
+    border: 3px solid rgb(72, 64, 238);
     text-align: center;
-    width: 500px;
-  }
+    width: 400px;
+    height: 350px;
+    margin: 1em auto;
+    border-radius: 1.5em;
 </style>
 
+<script src="login.js"></script>
+
 <div class="login">
-  <marquee>
-    <img src="Insider-Trading.jpg" alt="Logo" width="200">
-  </marquee>
+  <img src="Insider-Trading.jpg" alt="Logo" width="200">
   <h1>Insider Trading</h1>
   <p>"Where friends meet efficiency" </p>
 
@@ -98,6 +78,7 @@
       </p>
       <button class="submit" id="loginButton">Login</button>
     </form>
+
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
