Fix login and add CSS

--- a/mainCode/webpage/homepage.html
+++ b/mainCode/webpage/homepage.html
@@ -83,6 +83,8 @@
         flex-direction: row;
         height: 98vh;
         width: 100%;
+        font-family: 'Ubuntu', sans-serif;
+
     }
 
     .circleGroup {
@@ -96,11 +98,11 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+
     }
 
     .circleGroup h3 {
         text-align: center;
-
     }
 
     .circleGroup h1 {
@@ -110,8 +112,6 @@
     .circleGroup:hover {
         transform: scale(1.05, 1.05);
     }
-
-
 
 
     .tabcontent {
