--- a/mainCode/webpage/setPassword.html
+++ b/mainCode/webpage/setPassword.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<script src="login.js"></script>
+
 <div class="login">
     <form method="post" action="">
         <p>Reset your password. </p>
@@ -19,3 +21,5 @@
 <div class="new-account">
     <p>Don't have an account? Make one <a href="createUser.html">here</a>.</p>
 </div>
+
+</html>
