--- a/mainCode/webpage/createUser.html
+++ b/mainCode/webpage/createUser.html
@@ -1,23 +1,92 @@
 <!DOCTYPE html>
-<script src="newUserButtonClick.js"></script>
+<html lang="en">
+
+
+<style>
+  .login {
+    background-image: url("https://thumbs.dreamstime.com/b/happy-stick-figure-man-woman-jumping-drinking-champagne-celebrating-new-year-dancing-hands-up-night-party-watching-fireworks-231370618.jpg");
+    background-size: cover;
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 1024px;
+
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
+
+  }
+
+  body {
+    color: rgb(38, 50, 56);
+    font-family: 'Ubuntu', sans-serif;
+    width: 100%;
+    height: 100%;
+    padding: 0.5vw;
+    margin: 0;
+  }
+
+  .username {
+    width: 65%;
+    color: rgb(38, 50, 56);
+    padding: 10px 20px;
+    font-family: 'Ubuntu', sans-serif;
+    box-sizing: border-box;
+    border: 2px solid rgb(152, 162, 217);
+  }
+
+  .password {
+    width: 65%;
+    color: rgb(38, 50, 56);
+    padding: 10px 20px;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
+    border: 2px solid rgb(152, 162, 217);
+  }
+
+  .submit {
+    color: #fff;
+    background: linear-gradient(to right, #929ee6, #6357e8);
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 13px;
+  }
+
+  .boxed {
+    text-align: center;
+    color: rgb(38, 50, 56);
+    background-color: #ADD8E6;
+    border: 3px solid rgb(49, 42, 174);
+    text-align: center;
+    width: 400px;
+    height: 520px;
+    margin: 1em auto;
+    border-radius: 1.5em;
+</style>
+
 <script src="localStorage.js"></script>
-
 <div class="login">
-  <h1>Insider Trading</h1>
-  <img src="Insider-Trading.jpg" alt="Logo" width="200">
-  <form method="post" action="">
-    <p>Create an account.</p>
-    <p><input type="email" name="login" value="" placeholder="Username" id="newUsername" required></p>
-    <p><input type="password" name="password" value="" placeholder="Password" id="newPassword" required></p>
-    <a href="login.html">
-      <input type="button" value="Submit" id="newUserButton" />
-    </a>
-  </form>
+  <div class="boxed">
+    <img
+      src="https://academicaffairs.ucdavis.edu/sites/g/files/dgvnsk2376/files/styles/sf_profile/public/images/person/blank-profile-picture-973460_1280.png?h=ecfff384&itok=_zias6vW"
+      alt="Logo" width="200">
+    <h1>Insider Trading</h1>
+    <p>Create an account. </p>
+    <form method="post">
+      <p><input type="username" name="login" value="" placeholder="Username" class="username" id="username" required>
+      </p>
+      <p><input type="password" name="password" value="" placeholder="Password" class="password" id="password" required>
+      </p>
+      <button class="submit" id="loginButton" onclick="verifyNewUser()">Create Account</button>
+    </form>
+  </div>
 </div>
 
-<div class="login-help">
-  <p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
-</div>
-<div class="new-account">
-  <p>Already have an account? Login <a href="login.html">here</a>.</p>
-</div>
+</html>
