--- a/mainCode/webpage/homepage.html
+++ b/mainCode/webpage/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src="homepagescript.js" defer></script>
+
 
 
 <style>
@@ -38,15 +38,15 @@
         font-family: "Lato", sans-serif;
         width: 100%;
         height: 100%;
-        padding: 0.5vw;
         margin: 0;
+        background-color: rgb(54, 81, 201);
     }
 
     .tab {
         float: left;
         width: 30%;
         height: 100%;
-        border-right: solid black 1px;
+        border-right: solid black 3px;
 
     }
 
@@ -58,10 +58,13 @@
         border-bottom: solid black 1px;
     }
 
+    .titleBox h1 {
+        color: white;
+    }
+
     .tab button {
         display: block;
         background-color: inherit;
-        color: black;
         padding: 22px 16px;
         width: 100%;
         border: none;
@@ -71,6 +74,12 @@
         transition: 0.3s;
         font-size: 17px;
         font-weight: bold;
+        background-color: rgb(54, 81, 201);
+        color: white;
+    }
+
+    .tab button:hover {
+        transform: scale(1.02, 1.02);
     }
 
     .tab .tablinks {
@@ -78,11 +87,12 @@
     }
 
     #mainContent {
-        border: solid black 1px;
+
         display: flex;
         flex-direction: row;
         height: 98vh;
         width: 100%;
+        background-color: rgb(54, 81, 201);
     }
 
     .circleGroup {
@@ -96,15 +106,19 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+        background-color: rgb(82, 113, 255);
+        filter: drop-shadow(0px 5px 5px black)
     }
 
     .circleGroup h3 {
         text-align: center;
+        color: white;
 
     }
 
     .circleGroup h1 {
         font-size: 150px;
+        color: white;
     }
 
     .circleGroup:hover {
@@ -130,21 +144,29 @@
 
     .dropdown {
         display: flex;
+
+        background-color: rgb(54, 81, 201);
+        ;
         flex-direction: column;
-        margin-left: 2vw;
-        border-left: solid black 1px;
+        padding-left: 2vw;
+
         border-bottom: solid black 1px;
     }
 
-    .dropdown h5:not(:last-child) {
-        border-bottom: solid black 1px;
-    }
+    .dropdown h5:not(:last-child) {}
 
     .dropdown h5 {
         vertical-align: middle;
         padding-left: 1vw;
         padding-bottom: 1vh;
+        cursor: pointer;
+        color: white;
     }
+
+    .dropdown h5:hover {
+        transform: scale(1.02, 1.02);
+    }
+
 
     .hiddenDropdown {
         height: 0px;
@@ -167,6 +189,118 @@
         flex-direction: row;
         flex-wrap: wrap;
     }
+
+    #add_friends_button {
+        background-color: rgb(82, 113, 255);
+        color: white;
+        padding: 1vh 1vw;
+        border-radius: 15px;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    #add_friends_button:active {
+        background-color: rgb(207, 207, 207);
+    }
+
+    #add_friends_button:hover {
+        transform: scale(1.05, 1.05);
+    }
+
+    #friends {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .titleBox {
+        padding: 2vh;
+    }
+
+    .transaction_input {
+        height: 4vh;
+        background-color: rgb(82, 113, 255);
+        outline: none;
+        border: none;
+        color: white;
+        border-radius: 15px;
+        padding-left: 0.5vw;
+
+    }
+
+    .transaction_input::placeholder {
+        color: rgb(207, 207, 207);
+
+    }
+
+    #submit_transaction {
+        border: none;
+        outline: none;
+        background-color: rgb(82, 113, 255);
+        height: 4vh;
+        color: white;
+        border-radius: 15px;
+        cursor: pointer;
+        border: solid 1px white;
+    }
+
+    #submit_transaction:hover {
+        transform: scale(1.03, 1.03);
+    }
+
+    #submit_transaction:active {
+        background-color: rgb(207, 207, 207);
+    }
+
+    #table_title {
+        color: white;
+    }
+
+    li,
+    td,
+    p,
+    th {
+        color: white;
+    }
+
+    th,
+    tr {
+        background-color: rgb(82, 113, 255);
+        border-style: hidden !important;
+    }
+
+    td {
+        padding-left: 0.5vw;
+        border-style: hidden !important;
+    }
+
+    input {
+        background-color: rgb(82, 113, 255);
+        color: white;
+        height: 5vh;
+        font-size: 20px;
+
+    }
+
+    input::placeholder {
+        color: rgb(207, 207, 207);
+    }
+
+    table {
+        border-collapse: collapse;
+    
+    }
+
+    th{
+        padding-top: 1vh;
+
+    }
+
+    #transaction_table{
+        margin-bottom: 2vh;
+        filter: drop-shadow(0px 5px 5px black)
+    }
 </style>
 
 
@@ -175,7 +309,7 @@
 
     <div class="tab">
         <div class="titleBox">
-            <img src="Insider-Trading.jpg" width="150px" style="margin-right: 2vw">
+            <img src="Insider-Trading.png" width="150px" style="margin-right: 2vw">
             <h1>Insider Trading</h1>
         </div>
 
@@ -184,10 +318,10 @@
             document.getElementById("homeButton").addEventListener("click", () => { changeMainTab("home") });
         </script>
         <div class="dropdown" id="homeDropdown">
-            <h5>SuiteMates</h5>
-            <h5>Friends</h5>
-            <h5>Work friends</h5>
-            <h5>College Friends</h5>
+            <h5 onclick="changeMainTab('home_table_suitemates')">SuiteMates</h5>
+            <h5 onclick="changeMainTab('home_table_friends')">Friends</h5>
+            <h5 onclick="changeMainTab('home_table_work_friends')">Work friends</h5>
+            <h5 onclick="changeMainTab('home_table_college_friends')">College Friends</h5>
         </div>
         <button id="friendsButton" class="tablinks">Add Friends</button>
         <script>
@@ -202,53 +336,59 @@
         <button id="logoutButton" class="tablinks" onclick="window.location.href='login.html'">Logout</button>
 
 
-        <div class="dropdown" id="settingsDropdown">
 
-        </div>
 
     </div>
 
     <div class="tabcontent" id="tabcontent">
         <div class="tabcontentwrapper" id="home">
-            <div class="circleGroup" onclick="changeMainTab('home_suitemates')">
+            <div class="circleGroup" onclick="changeMainTab('home_table_suitemates')">
 
 
                 <h3>Suitemates</h3>
 
             </div>
 
-            <div class="circleGroup">
+            <div class="circleGroup" onclick="changeMainTab('home_table_friends')">
                 <h3>Friends</h3>
 
             </div>
 
-            <div class="circleGroup">
+            <div class="circleGroup" onclick="changeMainTab('home_table_work_friends')">
                 <h3>Work Friends</h3>
 
             </div>
-            <div class="circleGroup">
+            <div class="circleGroup" onclick="changeMainTab('home_table_college_friends')">
                 <h3>College Friends</h3>
 
             </div>
-            <div class="circleGroup">
+
+            <div class="circleGroup" onclick="createCircleGroup()">
                 <h1>+</h1>
 
             </div>
+
         </div>
 
 
 
 
-
-        <div class="tabcontentwrapper hiddenContent" id="home_suitemates">
+        <div class="tabcontentwrapper hiddenContent" id="home_table">
             <!-- CHARLIE PUT YOUR CODE IN BETWEEN THIS DIV!!-->
-            <h1>Suitemates Group</h1>
+            <h1 id="table_title">Suitemates Group</h1>
             <table id="transaction_table" border="3" class="table-content">
 
             </table>
             <div id="calculated_answer">
                 <p>Payments to be made:</p>
             </div>
+
+            <!--these inputs makes a new transaction-->
+            <input class="transaction_input" id="table_person" placeholder="person">
+            <input class="transaction_input" id="table_amount" placeholder="amount">
+            <input class="transaction_input" id="table_item" placeholder="item">
+            <input class="transaction_input" id="table_date" placeholder="date">
+            <button id="submit_transaction" onclick="add_transaction()">Add Transaction</button>
 
 
         </div>
@@ -277,6 +417,14 @@
 
 
         </div>
+        <div class="tabcontentwrapper hiddenContent" id="friends">
+            <h2 id="add_friends_button">Add Friends</h2>
+        </div>
+        <script src="homepagescript.js"></script>
+        <script>
+            loadAndAppendBubbles();
+        </script>
+
 
 
 
