added files for Trevor
added files for Trevor

--- a/mainCode/webpage/homepage.html
+++ b/mainCode/webpage/homepage.html
@@ -249,6 +249,24 @@
             <div id="calculated_answer">
                 <p>Payments to be made:</p>
             </div>
+            <br>
+            <label for="group-members">Name: </label>
+            <select name="group-members" id="nInput">
+                <option value="charlie">charlie</option>
+                <option value="tina">tina</option>
+                <option value="trevor">trevor</option>
+                <option value="ben">ben</option>
+            </select>
+            <br><br>
+            <label>Total: </label>
+            <input type="number" id="tInput">
+            <br><br>
+            <label>Item: </label>
+            <input type="text" id="iInput">
+            <br><br>
+            <label>Date: </label>
+            <input type="text" id="dInput">
+            <input type="button" id="add-button" value="Add Transaction!" class="test">
 
 
         </div>
