Implementing functions, add friends HTML and CSS

--- a/mainCode/webpage/login.html
+++ b/mainCode/webpage/login.html
@@ -31,21 +31,13 @@
   }
 
 
-  .username {
+  #username,
+  #password {
     width: 65%;
     color: rgb(38, 50, 56);
     padding: 10px 20px;
     font-family: 'Ubuntu', sans-serif;
     box-sizing: border-box;
-    border: 2px solid rgb(152, 162, 217);
-  }
-
-  .password {
-    width: 65%;
-    color: rgb(38, 50, 56);
-    padding: 10px 20px;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
     border: 2px solid rgb(152, 162, 217);
   }
 
@@ -78,7 +70,7 @@
   <div class="boxed">
     <img src="Insider-Trading1.png" alt="Logo" width="200">
     <h1>Insider Trading</h1>
-    <p>"Where friends meet efficiency The correct one " </p>
+    <p>"Where friends meet efficiency" </p>
     <form method="post">
       <p>Welcome back, please login to your account.</p>
       <p><input type="username" name="login" value="" placeholder="Username" class="username" id="username" required>
