--- a/mainCode/webpage/createUser.html
+++ b/mainCode/webpage/createUser.html
@@ -30,21 +30,13 @@
     margin: 0;
   }
 
-  .username {
+  #username,
+  #password {
     width: 65%;
     color: rgb(38, 50, 56);
     padding: 10px 20px;
     font-family: 'Ubuntu', sans-serif;
     box-sizing: border-box;
-    border: 2px solid rgb(152, 162, 217);
-  }
-
-  .password {
-    width: 65%;
-    color: rgb(38, 50, 56);
-    padding: 10px 20px;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
     border: 2px solid rgb(152, 162, 217);
   }
 
@@ -69,6 +61,7 @@
     height: 520px;
     margin: 1em auto;
     border-radius: 1.5em;
+  }
 </style>
 
 <script src="localStorage.js"></script>
