--- a/mainCode/webpage/setPassword.html
+++ b/mainCode/webpage/setPassword.html
@@ -1,25 +1,93 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<style>
+    .login {
+        /* Set rules to fill background */
+        min-height: 80%;
+        min-width: 1024px;
+
+        /* Set up proportionate scaling */
+        width: 100%;
+        height: auto;
+
+        /* Set up positioning */
+        position: fixed;
+        top: 0;
+        left: 0;
+
+    }
+
+    body {
+        color: rgb(38, 50, 56);
+        font-family: 'Ubuntu', sans-serif;
+        width: 100%;
+        height: 100%;
+        padding: 0.5vw;
+        margin: 0;
+    }
+
+    #username,
+    #oldPassword,
+    #newPassword,
+    #confirmPassword {
+        width: 65%;
+        color: rgb(38, 50, 56);
+        padding: 10px 20px;
+        box-sizing: border-box;
+        font-family: 'Ubuntu', sans-serif;
+        border: 2px solid rgb(152, 162, 217);
+    }
+
+
+    .submit {
+        color: #fff;
+        background: linear-gradient(to right, #929ee6, #6357e8);
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-bottom: 10px;
+        padding-top: 10px;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 13px;
+    }
+
+    .boxed {
+        text-align: center;
+        color: rgb(38, 50, 56);
+        background-color: #ADD8E6;
+        border: 3px solid rgb(49, 42, 174);
+        text-align: center;
+        width: 400px;
+        height: 400px;
+        margin: 1em auto;
+        border-radius: 1.5em;
+</style>
+
+
 
 <script src="login.js"></script>
 
 <div class="login">
-    <form method="post" action="">
-        <p>Reset your password. </p>
-        <p><input type="email" name="login" value="" placeholder="Username" id="username" required></p>
-        <p><input type="password" name="oldPassword" value="" placeholder="Old Password" id="oldPassword" required></p>
-        <p><input type="password" name="newPassword" value="" placeholder="New Password" id="newPassword" required></p>
-        <p><input type="password" name="confirmPassword" value="" placeholder="Confirm New Password"
-                id="confirmPassword" required></p>
-        <input type="button" value="Submit" id="newPassButton" />
+    <div class="boxed">
+        <form method="post" action="">
+            <p>Reset your password. </p>
+            <p><input type="email" name="username" value="" placeholder="Username" id="username" required></p>
+            <p><input type="password" name="oldPassword" value="" placeholder="Old Password" id="oldPassword" required>
+            </p>
+            <p><input type="password" name="newPassword" value="" placeholder="New Password" id="newPassword" required>
+            </p>
+            <p><input type="password" name="confirmPassword" value="" placeholder="Confirm New Password"
+                    id="confirmPassword" required></p>
+            <button class="submit" id="loginButton" onclick="resetPassword()">Change Password</button>
+        </form>
 
-    </form>
-</div>
-
-<div class="new-account">
-    <p>Back to the <a href="login.html">login page</a>.</p>
-</div>
-<div class="new-account">
-    <p>Don't have an account? Make one <a href="createUser.html">here</a>.</p>
+        <div class="new-account">
+            <p>Back to the <a href="login.html">login page</a>.</p>
+        </div>
+        <div class="new-account">
+            <p>Don't have an account? Make one <a href="createUser.html">here</a>.</p>
+        </div>
+    </div>
 </div>
 
 </html>
