--- a/mainCode/webpage/homepage.html
+++ b/mainCode/webpage/homepage.html
@@ -396,6 +396,7 @@
         height: 98vh;
         width: 100%;
         background-color: rgb(54, 81, 201);
+        overflow: hidden;
     }
 
     .circleGroup {
@@ -604,6 +605,67 @@
         margin-bottom: 2vh;
         filter: drop-shadow(0px 5px 5px black)
     }
+
+    #new_circle_modal{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: rgba(82, 113, 255,0.9);
+        z-index: 3;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        padding-left: 10vw;
+        padding-top: 7vh;
+    }
+    
+
+    #new_circle_modal > input{
+        width: 30%;
+    }
+
+    #new_circle_modal > h1{
+        margin-bottom: 5vh;
+        color: white;
+    }
+
+    .selectPerson{
+        color: white;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    .selected{
+        color:lime;
+    }
+
+
+    #confirm_group_button {
+        border: none;
+        outline: none;
+        background-color: rgb(82, 113, 255);
+        color: white;
+        border-radius: 15px;
+        cursor: pointer;
+        border: solid 1px white;
+        width: fit-content;
+        padding: 1vh 1vw;
+        user-select: none;
+        position: fixed;
+        bottom: 2vh;
+        right: 2vw;
+    }
+
+    #confirm_group_button:hover {
+        transform: scale(1.03, 1.03);
+    }
+
+    #confirm_group_button:active {
+        background-color: rgb(207, 207, 207);
+    }
 </style>
 
 
@@ -707,12 +769,11 @@
             </div>
             <br>
             <label for="group-members">Name: </label>
-            <select onchange="name_select_on_change(this);" name="group-members" id="nInput">
+            <select id="group_member_select" name="group-members" id="nInput">
                 <option value="charlie">charlie</option>
                 <option value="tina">tina</option>
                 <option value="trevor">trevor</option>
                 <option value="ben">ben</option>
-                <option  value="">new member</option>
             </select>
             <br><br>
             <label>Total: </label>
@@ -723,7 +784,7 @@
             <br><br>
             <label>Date: </label>
             <input type="text" id="dInput">
-            <input type="button" id="add-button" value="Add Transaction!" class="test">
+            <input onclick="add_transaction();" type="button" id="add-button" value="Add Transaction!" class="test">
 
 
         </div>
