--- a/mainCode/webpage/setPassword.html
+++ b/mainCode/webpage/setPassword.html
@@ -25,6 +25,7 @@
         height: 100%;
         padding: 0.5vw;
         margin: 0;
+        background-color: #FAF9F6;
     }
 
     #username,
@@ -61,6 +62,7 @@
         height: 400px;
         margin: 1em auto;
         border-radius: 1.5em;
+    }
 </style>
 
 
@@ -78,7 +80,9 @@
             </p>
             <p><input type="password" name="confirmPassword" value="" placeholder="Confirm New Password"
                     id="confirmPassword" required></p>
-            <button class="submit" id="loginButton" onclick="resetPassword()">Change Password</button>
+            <button class="submit" id="passButton"
+                onclick="resetPassword(document.getElementById('username').value, document.getElementById('oldPassword').value, document.getElementById('newPassword').value, document.getElementById('confirmPassword').value)">Change
+                Password</button>
         </form>
 
         <div class="new-account">
