--- a/SpecRunner2.html
+++ b/SpecRunner2.html
@@ -5,21 +5,21 @@
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v4.0.1</title>
 
-  <link rel="shortcut icon" type="image/png" href="group/lib/jasmine-4.0.1/jasmine_favicon.png">
-  <link rel="stylesheet" href="group/lib/jasmine-4.0.1/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="BenUnitTesting/lib/jasmine-4.0.1/jasmine_favicon.png">
+  <link rel="stylesheet" href="BenUnitTesting/lib/jasmine-4.0.1/jasmine.css">
 
-  <script src="group/lib/jasmine-4.0.1/jasmine.js"></script>
-  <script src="group/lib/jasmine-4.0.1/jasmine-html.js"></script>
-  <script src="group/lib/jasmine-4.0.1/boot0.js"></script>
+  <script src="BenUnitTesting/lib/jasmine-4.0.1/jasmine.js"></script>
+  <script src="BenUnitTesting/lib/jasmine-4.0.1/jasmine-html.js"></script>
+  <script src="BenUnitTesting/lib/jasmine-4.0.1/boot0.js"></script>
   <!-- optional: include a file here that configures the Jasmine env -->
-  <script src="group/lib/jasmine-4.0.1/boot1.js"></script>
+  <script src="BenUnitTesting/lib/jasmine-4.0.1/boot1.js"></script>
 
   <!-- include source files here... -->
-  <script src="webpage/localStorage.js"></script>
+  <script src="mainCode/webpage/localStorage.js"></script>
 
 
   <!-- include test files here... -->
-  <script src="webpage/testingLogin.js"></script>
+  <script src="mainCode/webpage/testingLocalStorage.js"></script>
 
 </head>
 
